crates/ty_python_semantic/resources/mdtest/snapshots/async.md_-_Async_with_statement…_-_Accidental_use_of_no…_(517649917c6efb00).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: async.md - Async with statements - Accidental use of non-async `with`
mdtest path: crates/ty_python_semantic/resources/mdtest/with/async.md
---

# Python source files

## mdtest_snippet.py

```
1 | class Manager:
2 |     async def __enter__(self): ...
3 |     async def __exit__(self, *args): ...
4 | 
5 | async def main():
6 |     # error: [invalid-context-manager] "Object of type `Manager` cannot be used with `async with` because it does not implement `__aenter__` and `__aexit__`"
7 |     async with Manager():
8 |         ...
```

# Diagnostics

```
error[invalid-context-manager]: Object of type `Manager` cannot be used with `async with` because it does not implement `__aenter__` and `__aexit__`
 --> src/mdtest_snippet.py:7:16
  |
5 | async def main():
6 |     # error: [invalid-context-manager] "Object of type `Manager` cannot be used with `async with` because it does not implement `__aent…
7 |     async with Manager():
  |                ^^^^^^^^^
8 |         ...
  |
info: Objects of type `Manager` can be used as sync context managers
info: Consider using `with` here
info: rule `invalid-context-manager` is enabled by default

```
