crates/ty_python_semantic/resources/mdtest/snapshots/attribute_assignment.md_-_Attribute_assignment_-_Setting_attributes_on_union_types.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: attribute_assignment.md - Attribute assignment - Setting attributes on union types
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def _(flag: bool) -> None:
 2 |     if flag:
 3 |         class C1:
 4 |             attr: int = 0
 5 | 
 6 |     else:
 7 |         class C1:
 8 |             attr: str = ""
 9 | 
10 |     # TODO: The error message here could be improved to explain why the assignment fails.
11 |     C1.attr = 1  # error: [invalid-assignment]
12 | 
13 |     class C2:
14 |         if flag:
15 |             attr: int = 0
16 |         else:
17 |             attr: str = ""
18 | 
19 |     # TODO: This should be an error
20 |     C2.attr = 1
```

# Diagnostics

```
error: invalid-assignment: Object of type `Literal[1]` is not assignable to attribute `attr` on type `<class 'C1'> | <class 'C1'>`
  --> src/mdtest_snippet.py:11:5
   |
10 |     # TODO: The error message here could be improved to explain why the assignment fails.
11 |     C1.attr = 1  # error: [invalid-assignment]
   |     ^^^^^^^
12 |
13 |     class C2:
   |
info: `lint:invalid-assignment` is enabled by default

```
