crates/ty_python_semantic/resources/mdtest/snapshots/attribute_assignment.md_-_Attribute_assignment_-_Unknown_attributes.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: attribute_assignment.md - Attribute assignment - Unknown attributes
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/attribute_assignment.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C: ...
2 | 
3 | C.non_existent = 1  # error: [unresolved-attribute]
4 | 
5 | instance = C()
6 | instance.non_existent = 1  # error: [unresolved-attribute]
```

# Diagnostics

```
error: unresolved-attribute: Unresolved attribute `non_existent` on type `<class 'C'>`.
 --> src/mdtest_snippet.py:3:1
  |
1 | class C: ...
2 |
3 | C.non_existent = 1  # error: [unresolved-attribute]
  | ^^^^^^^^^^^^^^
4 |
5 | instance = C()
  |
info: `lint:unresolved-attribute` is enabled by default

```

```
error: unresolved-attribute: Unresolved attribute `non_existent` on type `C`.
 --> src/mdtest_snippet.py:6:1
  |
5 | instance = C()
6 | instance.non_existent = 1  # error: [unresolved-attribute]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
info: `lint:unresolved-attribute` is enabled by default

```
